Fix meta viewport tag. Correct CNAME format. Center align icons on mobile.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=500, initial-scale=0.86">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Red+Hat+Display|Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
     <title>C.J. Adeszko</title>
